--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
             <artifactId>jackson-core</artifactId>
             <version>2.11.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
